@@ -21,6 +21,7 @@ NEW: [features/enhancments]
 
 BUG FIXES:
 +Fix incorrect page count shown in print previews.
++Remember print settings throughout session and for every frame.
 
 #-----------------------------------------------------------------------------#
 
